--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "sharp": "^0.32.1",
     "swr": "^2.1.5",
     "typescript": "5.0.4",
+    "vercel": "^30.0.0",
     "yup": "^1.1.1",
     "zustand": "^4.3.7"
   },
