--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt": "^5.1.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "mongodb": "^5.5.0",
     "next": "13.3.1",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
