--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next-auth/prisma-adapter": "^1.0.6",
     "@next/font": "13.3.1",
     "@prisma/client": "^4.14.0",
+    "@types/cors": "^2.8.13",
     "@types/node": "18.16.2",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
